# tinyui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_linux.sh  build_linux_wasm.sh  build_wasm.bat  build_wasm_clang.bat  build_wasm_mingw64.bat  build_win.bat  run_wasm.bat  setupwasm.bat  setupwasm.sh
libs/: CMakeLists.txt
libs/sokol_config/: sokol.cpp
sources/: CMakeLists.txt
sources/cpp/: main.cpp
